♻️ JWT Cliams 에 유니크 id값 추가 기존 버킷이름 생성 key를 yaml파일로 관리하게 했습니다. 코멘트에도 멀티파트로 첨부파일을 추가 할 수 있도록 했습니다.